CR-2004-07-07-0: Bugfix:    qping doesn't support host_aliases file
                 Changed:   qping binary
                 Issue:     1124
                 Bugtraq:   5071539
                 Review:    AA
       
MD-2004-07-08-0: Bugfix:    Qmaster requires a local conf in order to start
                 Issue:     1104 
                 Bugtraq:   5071987
                 Review:    CR
                 Changed:   qmaster_configuration

JG-2004-07-07-0: Testsuite: - Source documentation for compile procedure.
                            - Disable caching of testsuite generated html files.

JG-2004-07-06-0: Bugfix:    Fixed the build for HPUX.

CR-2004-07-06-0: Bugfix:    qmaster clients may not reconnect after qmaster 
                            outage
                 Changed:   communication library (commlib)
                 Issue:     1126
                 Review:    JG

JG-2004-07-05-1: QA:        Update of review form and help text.
                 Review:    CR

JG-2004-07-05-0: Bugfix:    projects not available after sge_qmaster restart
                 Changed:   sge_qmaster
                 Issue:     1122
                 Bugtraq:   5071498
                 Review:    CR

DT-2004-07-05-0: Bugfix:    o Fixed broken build on AIX
                            o Fixed typos in JGrid
                 Changed:   shepherd, JGrid

JG-2004-07-01-0: Testsuite: Added check for qmaster spooling containing a 
                            testcase for issue 1122.

EB-2004-06-23-0: Cleanup:   Added/Changed ADOC commets

EB-2004-06-22-0: Cleanup:   Added ADOC commets

CR-2004-06-18-1: Testsuite: - new check for CR-2004-06-18-0 (issues 1096 and 
                              1098)
                            - new configuration parameter: reserved_port
                            - fixed testsuite problem on shutdown of multi 
                              threaded qmaster process(es!) on linux systems.
