@@ -1,0 +1,87 @@
+Source Code Review Form 
+=======================
+(version 1.0)
+
+Date: 2004-07-07
+
+1 Identification
+1.1 Issue: 1133
+1.2 Bugtraq: 5071914
+1.3 Summary: scheduler ignores queue seqno for queue sorting
+1.4 Changelog ID: SG-2004-07-07-0
+1.5 Developer(s): SG
+1.6 Reviewer(s): 
+
+
+2 Conformance to specification
+2 [x] yes
+2 [ ] no - comment:
+
+
+3 Documentation
+3.1 user/admin guide
+3.1 [x] yes
+3.1 [ ] no - comment:
+
+3.2 man pages (user view)
+3.2 [x] yes
+3.2 [ ] no - comment:
+
+3.3 -help output
+3.3 [x] yes
+3.3 [ ] no - comment:
+
+3.4 documented interfaces (at least GDI, EVI, libs)
+3.4 [x] yes
+3.4 [ ] no - comment:
+
+3.5 messages, output formats
+3.5 [x] yes
+3.5 [ ] no - comment:
+
+
+4 Source review
+4.1 Style guide conformance
+4.1 [x] yes
+4.1 [ ] no - comment:
+
+4.2 Memory leaks
+4.2 [x] yes
+4.2 [ ] no - comment:
+
+4.3 Thread safe
+4.3 [x] yes
+4.3 [ ] no
+
+5 Tests
+5.1 Manual tests
+Description: see issue 1138
+Successfull execution
+5.1 [X] yes
+5.1 [ ] no - comment:
+
+5.1 Used memory leak debugger
+5.1 [ ] yes
+5.1 [X] no - comment:
+
+5.2 Testsuite covers issue
+5.2 [ ] yes
+5.2 [X] no - comment: has to be written, see issue 1138
+
+5.3 If 5.2 = no: Testsuite issue created
+5.3 [x] yes
+5.3 [ ] no - comment:
+
+5.4 Testsuite run successfull
+5.4 [ ] yes
+5.4 [x] no - comment:
+
+
+6 Comments
+
+7 Accepted
+7 [X] yes
+7 [ ] no - comment:
+  
+
+
